Fix last button link not showing in the home page (change AOS offset)

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -77,19 +77,17 @@
 
 
 .plan_container{
+    margin-top:4rem ;
     height: 100svh;
-    padding: 1px;
-    @media (max-width:700px) {
-      height: 120svh;
-    }
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
     .plan{
-      max-width: 700px;
+      width: 700px;
       display: flex;
       flex-direction: column;
-      margin:  auto;
-      margin-top: 5rem;
-      gap: 2rem;
+      gap: 3rem;
       @media (max-width:700px) {
         width: 90%;
       }
